--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.60.0",
+    "styled-components": "^6.0.0-rc.1",
     "typescript": "^4.8.4",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
