--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@types/uuid": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.7",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "sass": "^1.60.0",
     "styled-components": "^6.0.0-rc.1",
     "typescript": "^4.8.4",
