--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --transformIgnorePatterns \\\"node_modules/(?!axios)/\\\" --env=jsdom",
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios/)\" --env=jsdom",
     "eject": "react-scripts eject",
     "storybook": "storybook dev -p 9009",
     "build-storybook": "storybook build",
