--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^8.0.7",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.60.0",
     "styled-components": "^6.0.0-rc.1",
     "typescript": "^4.8.4",
