--- a/package.json
+++ b/package.json
@@ -1,87 +1,88 @@
 {
-  "name": "todolist",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": "https://deniskulik.github.io/todolist/",
-  "dependencies": {
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.0",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.1",
-    "@types/react": "^18.0.23",
-    "@types/react-dom": "^18.0.7",
-    "@types/react-redux": "^7.1.25",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/uuid": "^9.0.1",
-    "axios": "^1.4.0",
-    "formik": "^2.4.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.7",
-    "react-router-dom": "^6.14.1",
-    "react-scripts": "5.0.1",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
-    "sass": "^1.60.0",
-    "styled-components": "^6.0.0-rc.1",
-    "typescript": "^4.8.4",
-    "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios/)\" --env=jsdom",
-    "eject": "react-scripts eject",
-    "storybook": "storybook dev -p 9009",
-    "build-storybook": "storybook build",
-    "jest:integration": "jest -c integration/jest.config.js",
-    "test:integration": "start-server-and-test storybook http-get://localhost:9009 jest:integration"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest",
-      "plugin:storybook/recommended"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@storybook/addon-essentials": "7.0.21",
-    "@storybook/addon-interactions": "7.0.21",
-    "@storybook/addon-links": "7.0.21",
-    "@storybook/blocks": "7.0.21",
-    "@storybook/preset-create-react-app": "7.0.21",
-    "@storybook/react": "7.0.21",
-    "@storybook/react-webpack5": "7.0.21",
-    "@storybook/testing-library": "0.0.14-next.2",
-    "babel-plugin-named-exports-order": "0.0.2",
-    "eslint-plugin-storybook": "^0.6.12",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "jest-image-snapshot": "^6.1.0",
-    "jest-puppeteer": "^9.0.0",
-    "prop-types": "15.8.1",
-    "puppeteer": "^20.7.2",
-    "start-server-and-test": "^2.0.0",
-    "storybook": "7.0.21",
-    "webpack": "5.87.0"
-  }
+    "name": "todolist",
+    "version": "0.1.0",
+    "private": true,
+    "homepage": "https://deniskulik.github.io/todolist/",
+    "dependencies": {
+        "@emotion/react": "^11.11.0",
+        "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.11.16",
+        "@mui/material": "^5.13.0",
+        "@reduxjs/toolkit": "^1.9.5",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^27.5.2",
+        "@types/node": "^16.18.1",
+        "@types/react": "^18.0.23",
+        "@types/react-dom": "^18.0.7",
+        "@types/react-redux": "^7.1.25",
+        "@types/react-router-dom": "^5.3.3",
+        "@types/uuid": "^9.0.1",
+        "axios": "^1.4.0",
+        "formik": "^2.4.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-redux": "^8.0.7",
+        "react-router-dom": "^6.14.1",
+        "react-scripts": "5.0.1",
+        "redux": "^4.2.1",
+        "redux-thunk": "^2.4.2",
+        "sass": "^1.60.0",
+        "styled-components": "^6.0.0-rc.1",
+        "typescript": "^4.8.4",
+        "uuid": "^9.0.0",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios/)\" --env=jsdom",
+        "eject": "react-scripts eject",
+        "storybook": "storybook dev -p 9009",
+        "build-storybook": "storybook build",
+        "jest:integration": "jest -c integration/jest.config.js",
+        "test:integration": "start-server-and-test storybook http-get://localhost:9009 jest:integration"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest",
+            "plugin:storybook/recommended"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@storybook/addon-essentials": "7.0.21",
+        "@storybook/addon-interactions": "7.0.21",
+        "@storybook/addon-links": "7.0.21",
+        "@storybook/blocks": "7.0.21",
+        "@storybook/preset-create-react-app": "7.0.21",
+        "@storybook/react": "7.0.21",
+        "@storybook/react-webpack5": "7.0.21",
+        "@storybook/testing-library": "0.0.14-next.2",
+        "babel-plugin-named-exports-order": "0.0.2",
+        "eslint-plugin-storybook": "^0.6.12",
+        "jest": "^29.5.0",
+        "jest-environment-jsdom": "^29.5.0",
+        "jest-image-snapshot": "^6.1.0",
+        "jest-puppeteer": "^9.0.0",
+        "prettier": "3.0.0",
+        "prop-types": "15.8.1",
+        "puppeteer": "^20.7.2",
+        "start-server-and-test": "^2.0.0",
+        "storybook": "7.0.21",
+        "webpack": "5.87.0"
+    }
 }
