--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@types/uuid": "^9.0.1",
         "axios": "^1.4.0",
         "formik": "^2.4.2",
+        "overlayscrollbars": "1.13.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.7",
