--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.5.2",
         "@types/node": "^16.18.1",
+        "@types/overlayscrollbars": "^1.12.5",
         "@types/react": "^18.0.23",
         "@types/react-dom": "^18.0.7",
         "@types/react-redux": "^7.1.25",
